--- a/vercel.json
+++ b/vercel.json
@@ -24,6 +24,6 @@
     "DB_PASSWORD": "elwOtmmnDnH1QmHRG5NxPmf14wDag8ku",
     "DB_DATABASE": "rchaewtw",
     "DB_HOST": "isabelle.db.elephantsql.com",
-    "DB_PORT": "5432"
+    "DB_PORT": 5432
   }
 }
