--- a/vercel.json
+++ b/vercel.json
@@ -8,15 +8,8 @@
   ],
   "routes": [
     {
-      "handle": "filesystem"
-    },
-    {
-      "src": "/api/(.*)",
-      "dest": "server.js"
-    },
-    {
       "src": "/(.*)",
-      "dest": "public/$1"
+      "dest": "server.js"
     }
   ],
   "env": {
@@ -24,6 +17,6 @@
     "DB_PASSWORD": "elwOtmmnDnH1QmHRG5NxPmf14wDag8ku",
     "DB_DATABASE": "rchaewtw",
     "DB_HOST": "isabelle.db.elephantsql.com",
-    "DB_PORT": 5432
+    "DB_PORT": "5432"
   }
 }
