--- a/vercel.json
+++ b/vercel.json
@@ -8,8 +8,12 @@
   ],
   "routes": [
     {
-      "src": "/(.*)",
+      "src": "(.*)",
       "dest": "server.js"
+    },
+    {
+      "src": "(.*)",
+      "dest": "/index.html"
     }
   ],
   "env": {
