--- a/vercel.json
+++ b/vercel.json
@@ -7,18 +7,8 @@
     }
   ],
   "routes": [
-    { "src": "/api/dados-bibliotecas", "dest": "server.js" },
-    { "src": "/api/dados-bibliotecarios-publicos", "dest": "server.js" },
-    { "src": "/api/dados-bibliotecarios-privados", "dest": "server.js" },
-    { "src": "/api/dados-equipamentos", "dest": "server.js" },
-    { "src": "/api/dados-equipamentos-publicos", "dest": "server.js" },
-    { "src": "/api/dados-equipamentos-privados", "dest": "server.js" },
-    { "src": "/api/estados", "dest": "server.js" },
+    { "src": "/api/(.*)", "dest": "server.js" },
     { "src": "/(.*)", "dest": "/" }
-  ],
-  "rewrites": [
-    { "source": "/api/(.*)", "destination": "/$1" },
-    { "source": "/(.*)", "destination": "/index.html" }
   ],
   "env": {
     "DB_USER": "rchaewtw",
