--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "pg": "^8.11.3",
     "pg-promise": "^11.5.4",
     "vercel": "^32.6.1"
+  },
+  "devDependencies": {
+    "dotenv": "^16.3.1"
   }
 }
