--- a/vercel.json
+++ b/vercel.json
@@ -9,5 +9,12 @@
   "routes": [
     { "handle": "filesystem" },
     { "src": "/(.*)", "dest": "/server.js" }
-  ]
+  ],
+  "env": {
+    "DB_HOST": "seu_host",
+    "DB_USER": "seu_usuario",
+    "DB_PORT": "sua_porta",
+    "DB_PASSWORD": "sua_senha",
+    "DB_DATABASE": "seu_banco_de_dados"
+  }
 }
