--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "routes": [
     {
-      "src": "(.*)",
+      "src": "/api/(.*)",
       "dest": "https://dashboard-pi-production.up.railway.app/api/$1",
       "headers": {
         "Host": "dashboard-pi-production.up.railway.app"
