--- a/vercel.json
+++ b/vercel.json
@@ -2,15 +2,8 @@
   "version": 2,
   "routes": [
     {
-      "src": "/api/(.*)",
-      "dest": "https://dashboard-pi-production.up.railway.app/api/$1",
-      "headers": {
-        "Host": "dashboard-pi-production.up.railway.app"
-      }
-    },
-    {
       "src": "/(.*)",
-      "dest": "/$1"
+      "dest": "https://dashboard-pi-production.up.railway.app/$1"
     }
   ]
 }
